# notifyme

./: .gitignore  README.md  repository.db
amqp/: Cargo.toml
amqp/src/: error.rs
controller/: Cargo.toml
controller/src/: lib.rs
controller/src/handler/: mod.rs
controller/src/service/: mod.rs
domain/src/: lib.rs
domain/src/records/: mod.rs
domain/src/responses/: mod.rs
history/: Cargo.toml
history/migrations/: 20220914111131_history.sql
history/src/: lib.rs
history/src/common/: mod.rs
history/src/handler/: mod.rs
history/src/repository/error/: mod.rs
history/src/service/: mod.rs
notifyme/: .env  .gitignore  Cargo.toml  history.db  history.db-shm  history.db-wal  repository.db  repository.db-shm  repository.db-wal  text
notifyme/amqp/src/: manager.rs
notifyme/controller/: Cargo.toml
notifyme/controller/src/: lib.rs  main.rs
notifyme/controller/src/common/: mod.rs
notifyme/controller/src/handler/: mod.rs
notifyme/controller/src/service/: mod.rs
notifyme/controller/src/transform/: mod.rs
notifyme/domain/: Cargo.toml
notifyme/domain/src/: lib.rs
notifyme/domain/src/models/: mod.rs
notifyme/domain/src/records/: mod.rs
notifyme/domain/src/requests/: mod.rs
notifyme/domain/src/responses/: mod.rs
notifyme/history/: .env  Cargo.toml  history.db
notifyme/history/migrations/: 20220914111131_history.sql
notifyme/history/src/: lib.rs  main.rs
notifyme/history/src/handler/: mod.rs
notifyme/history/src/repository/: mod.rs
notifyme/history/src/repository/common/: mod.rs
notifyme/history/src/repository/common/errors/: mod.rs
notifyme/history/src/repository/common/traits/: mod.rs
notifyme/history/src/repository/sqlite/: mod.rs
notifyme/history/src/service/: mod.rs
notifyme/message_queue/: Cargo.toml
notifyme/message_queue/examples/: client_example.rs  rabbit.rs
notifyme/message_queue/src/: lib.rs
notifyme/message_queue/src/core/: consumer.rs  mod.rs  publisher.rs
notifyme/rabbitmq_client/: Cargo.toml
notifyme/rabbitmq_client/src/: handler.rs  lib.rs  manager.rs  publisher.rs
notifyme/rabbitmq_client/src/core/: client.rs  consumer.rs  handler.rs  mod.rs  publisher.rs
notifyme/rabbitmq_client/src/error/: mod.rs
notifyme/repository/: .env  Cargo.toml
notifyme/repository/migrations/: 20220916095818_repo.sql
notifyme/repository/src/: lib.rs  main.rs
notifyme/repository/src/handler/: mod.rs
notifyme/repository/src/repository/: mod.rs
notifyme/repository/src/repository/common/errors/: mod.rs
notifyme/repository/src/repository/sqlite/: mod.rs
notifyme/repository/src/service/: mod.rs
notifyme/telegram_bot/: .env  Cargo.toml
notifyme/telegram_bot/src/: lib.rs  main.rs
notifyme/telegram_bot/src/client/: mod.rs
notifyme/telegram_bot/src/client/handler/: mod.rs
notifyme/telegram_bot/src/client/service/: mod.rs
notifyme/telegram_bot/src/client/state/: mod.rs
notifyme/telegram_bot/src/common/: mod.rs
notifyme/telegram_bot/src/customer/: mod.rs
notifyme/telegram_bot/src/customer/handler/: mod.rs
notifyme/telegram_bot/src/customer/service/: mod.rs
notifyme/telegram_bot/src/customer/state/: mod.rs
notifyme/telegram_bot/src/handler/: mod.rs
notifyme/telegram_bot/src/service/: mod.rs
notifyme/telegram_bot/src/storage/: mod.rs
repository/src/common/: mod.rs
repository/src/handler/: mod.rs
repository/src/repository/sqlite/: mod.rs
repository/src/service/: mod.rs
telegram_bot/: Cargo.toml
telegram_bot/src/client/handler/: mod.rs
telegram_bot/src/common/storage/: mod.rs
telegram_bot/src/customer/: mod.rs
telegram_bot/src/customer/service/: mod.rs
