[package]
name = "amqp"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.*"
lapin = "2.*"
dotenv = "0.15.*"
tokio = { version = "1.21.*", features = ["macros", "rt-multi-thread"] }
log = "0.4.*"
pretty_env_logger = "0.4.*"
tokio-executor-trait = "2.*"
tokio-reactor-trait = "1.*"
tokio-stream = "0.1"