[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10.*", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4.*"
pretty_env_logger = "0.4.*"
dotenv = "0.15.*"
envy = "0.4.*"
url = "2.3.*"
tokio = { version = "1.21.*", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.*"
serde = "1.0.*"
amqp = { path = "../amqp"}
domain = { path = "../domain"}
