[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.*"
envy = "0.4.*"
lapin = "2.*"
dotenv = "0.15.*"
tokio = { version = "1.21.*", features = ["macros", "rt-multi-thread"] }
serde_derive = "1.0.*"
serde = "1.0.*"
serde_json = "1.0.*"
async-trait = "0.1.*"
rabbitmq_client = { path = "../rabbitmq_client"}
domain = { path = "../domain"}