[package]
name = "history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.*"
lapin = "2.*"
tokio = { version = "1.19.*", features = ["net", "macros", "rt-multi-thread"] }
message_queue = { path = "../message_queue"}