[package]
name = "history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.*"
dotenv = "0.15.*"
envy = "0.4.*"
lapin = "2.*"
tokio = { version = "1.21.*", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.*"
serde = "1.0.*"
sqlx = { version = "0.6.*", features = [ "runtime-tokio-rustls", "sqlite" ] }
log = "0.4.*"
pretty_env_logger = "0.4.*"
rabbitmq_client = { path = "../rabbitmq_client"}
domain = { path = "../domain"}