[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.*"
dotenv = "0.15.*"
lapin = "2.*"
tokio = { version = "1.19.*", features = ["net", "macros", "rt-multi-thread"] }
serde_derive = "1.0.*"
serde_json = "1.0.*"
serde = "1.0.*"
sqlx = { version = "0.6.*", features = [ "runtime-tokio-rustls", "sqlite" ] }
message_queue = { path = "../message_queue"}
domain = { path = "../domain"}