[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10.*", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4.*"
pretty_env_logger = "0.4.*"
dotenv = "0.15.*"
url = "2.3.*"
lapin = "2.*"
tokio = { version = "1.21.*", features = ["macros", "rt-multi-thread"] }
serde_derive = "1.0.*"
serde_json = "1.0.*"
serde = "1.0.*"
rabbitmq_client = { path = "../rabbitmq_client"}
domain = { path = "../domain"}
